sample-configs/bzzd-http-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bzzd-http
  namespace: swarm
spec:
  # type: LoadBalancer
  # loadBalancerIP: 13.79.165.39
  selector: 
    app: bzzd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: bzzd-http-port
